--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://dimamalah.github.io/pet_vindecoder",
+	"homepage": " https://dimamalah.github.io/PET_VinDecodeR/",
 	"name": "vin.decoder",
 	"version": "0.1.0",
 	"private": true,
